<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <de.develappers.facerecognition.view.AutoFitTextureView
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:id="@+id/textureView"
            android:layout_marginTop="0dp"
            android:layout_alignParentTop="true"/>

    <TextView

            android:id="@+id/tvFirstTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/have_you_been_here"
            android:padding="@dimen/padding_default"
            android:textSize="@dimen/text_large"
            android:gravity="center"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">
        <Button
                android:text="@string/yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnYes"
                android:textSize="@dimen/text_large"
                app:layout_constraintEnd_toStartOf="@+id/btnNo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toTopOf="parent"/>
        <Button
                android:text="@string/no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnNo"
                android:textSize="@dimen/text_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnYes"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>