<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistrationActivity">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="0dp"
                                                       android:layout_height="match_parent"
                                                       android:id="@+id/dataLayout"
                                                       app:layout_constraintStart_toStartOf="parent"
                                                       app:layout_constraintHorizontal_bias="0.3"
                                                       app:layout_constraintEnd_toStartOf="@+id/cameraLayout">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/first_name"
                android:selectAllOnFocus="true"
                android:ems="10"
                android:paddingLeft="@dimen/padding_default"
                android:id="@+id/etFirstName"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/etLastName"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/last_name"
                android:selectAllOnFocus="true"
                android:ems="10"
                android:paddingLeft="@dimen/padding_default"
                android:id="@+id/etLastName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etFirstName"
                app:layout_constraintBottom_toTopOf="@+id/etCompany"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/company_name"
                android:selectAllOnFocus="true"
                android:ems="10"
                android:paddingLeft="@dimen/padding_default"
                android:id="@+id/etCompany"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etLastName"
                app:layout_constraintBottom_toTopOf="@+id/ppLayout"/>

        <LinearLayout
                android:id="@+id/ppLayout"
                android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintTop_toBottomOf="@+id/etCompany">
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxPrivacy"/>
            <TextView
                    android:text="@string/privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvPrivacy"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout android:id="@+id/cameraLayout"
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:weightSum="3"
                  android:padding="@dimen/padding_default"
                  app:layout_constraintStart_toEndOf="@+id/dataLayout"
                  app:layout_constraintHorizontal_bias="0.5"
                  app:layout_constraintEnd_toEndOf="parent">

        <de.develappers.facerecognition.view.AutoFitTextureView
                android:id="@+id/cameraSurface"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_weight="2"
                        android:id="@+id/signatureLayout">

            <RelativeLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_alignParentStart="true"
                          android:layout_alignParentLeft="true"
                          android:layout_toLeftOf="@id/btnOk"
                          android:layout_toStartOf="@id/btnOk">
                <de.develappers.facerecognition.view.SignatureView
                        android:id="@+id/signatureView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:text="@string/signature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerInParent="true"
                        android:id="@+id/tvSignature"/>
            </RelativeLayout>

            <Button
                    android:text="@string/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/text_large"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:id="@+id/btnOk"/>

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>